docs: README update